--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nguyentruonggiang212001.github.io/ProjectWeb",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
