--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -4,3 +4,4 @@ VITE_API_KEY="
 VITE_API_SECRET="_pkYAqBxK46PueooRgUwwp6ufUm4"
 VITE_UPLOAD_PRESET="ReactJS"
 VITE_API_URL=http://localhost:9999/api
+VITE_API_URL=https://projectweb-kn0s.onrender.com/api
