--- a/Backend/.env.production
+++ b/Backend/.env.production
@@ -1,5 +1,5 @@
 PORT=9999
-MONGO_URI= mongodb+srv://giangnguyen:xxxxxxxxxx@cluster0.37fsm.mongodb.net/giang-db
+MONGO_URI= mongodb+srv://giangnguyen:NIAILzzeiy8Y86QP@cluster0.37fsm.mongodb.net/giang-db
 SECRET_KEY="done"
 JWT_EXPIRES_IN="30d"
 CATEGORY_ID_DEFAULT="67836a60a83094583683c85e"
